Shuffled config and templates around

--- a/lang/en.json
+++ b/lang/en.json
@@ -2,13 +2,15 @@
 "ACTOR.TypeCharacter": "Player Character",
 "ACTOR.TypeNpc": "Non-Player Character",
 "ACTOR.TypeVehicle": "Vehicle",
+"ITEM.TypeArchetype": "Archetype",
 "ITEM.TypeBackpack": "Backpack",
 "ITEM.TypeClass": "Class",
 "ITEM.TypeConsumable": "Consumable",
 "ITEM.TypeEquipment": "Equipment",
 "ITEM.TypeFeat": "Feature",
 "ITEM.TypeLoot": "Loot",
-"ITEM.TypeSpell": "Spell",
+"ITEM.TypeSpell": "Power",
+"ITEM.TypeSpecies": "Species",
 "ITEM.TypeTool": "Tool",
 "ITEM.TypeWeapon": "Weapon",
 
@@ -153,25 +155,30 @@
 "ME5E.ClassSkillsNumber": "Number of Starting Skills",
 "ME5E.ClassSkillsEligible": "Eligible Class Skills",
 "ME5E.ClassSkillsChosen": "Chosen Class Skills",
-"ME5E.ComponentMaterial": "Material",
 "ME5E.ComponentSomatic": "Somatic",
-"ME5E.ComponentVerbal": "Verbal",
 "ME5E.ConBlinded": "Blinded",
 "ME5E.ConCharmed": "Charmed",
 "ME5E.ConDeafened": "Deafened",
-"ME5E.ConDiseased": "Diseased",
 "ME5E.ConExhaustion": "Exhaustion",
 "ME5E.ConFrightened": "Frightened",
+"ME5E.ConFrozen": "Frozen",
 "ME5E.ConGrappled": "Grappled",
 "ME5E.ConImm": "Condition Immunities",
 "ME5E.ConIncapacitated": "Incapacitated",
+"ME5E.ConIndoctrinated": "Indoctrinated",
 "ME5E.ConInvisible": "Invisible",
+"ME5E.ConLifted": "Lifted",
 "ME5E.ConParalyzed": "Paralyzed",
-"ME5E.ConPetrified": "Petrified",
 "ME5E.ConPoisoned": "Poisoned",
+"ME5E.ConPrimedForce": "Primed (Force)",
+"ME5E.ConPrimedNecrotic": "Primed (Necrotic)",
+"ME5E.ConPrimedFire": "Primed (Fire)",
+"ME5E.ConPrimedCold": "Primed (Cold)",
+"ME5E.ConPrimedLightning": "Primed (Lightning)",
 "ME5E.ConProne": "Prone",
 "ME5E.ConRestrained": "Restrained",
 "ME5E.ConStunned": "Stunned",
+"ME5E.ConTargeting": "Targeting",
 "ME5E.ConUnconscious": "Unconscious",
 "ME5E.Concentration": "Concentration",
 "ME5E.ConsumeTitle": "Resource Consumption",
@@ -204,59 +211,31 @@
 "ME5E.CoverThreeQuarters": "Three Quarters",
 "ME5E.CoverTotal": "Total",
 "ME5E.CostGP": "Cost (GP)",
-"ME5E.CreatureAberration": "Aberration",
-"ME5E.CreatureAberrationPl": "Aberrations",
-"ME5E.CreatureBeast": "Beast",
-"ME5E.CreatureBeastPl": "Beasts",
-"ME5E.CreatureCelestial": "Celestial",
-"ME5E.CreatureCelestialPl": "Celestials",
 "ME5E.CreatureConstruct": "Construct",
 "ME5E.CreatureConstructPl": "Constructs",
-"ME5E.CreatureDragon": "Dragon",
-"ME5E.CreatureDragonPl": "Dragons",
-"ME5E.CreatureElemental": "Elemental",
-"ME5E.CreatureElementalPl": "Elementals",
-"ME5E.CreatureFey": "Fey",
-"ME5E.CreatureFeyPl": "Fey",
-"ME5E.CreatureFiend": "Fiend",
-"ME5E.CreatureFiendPl": "Fiends",
-"ME5E.CreatureGiant": "Giant",
-"ME5E.CreatureGiantPl": "Giants",
-"ME5E.CreatureHumanoid": "Humanoid",
-"ME5E.CreatureHumanoidPl": "Humanoids",
-"ME5E.CreatureMonstrosity": "Monstrosity",
-"ME5E.CreatureMonstrosityPl": "Monstrosities",
-"ME5E.CreatureOoze": "Ooze",
-"ME5E.CreatureOozePl": "Oozes",
-"ME5E.CreaturePlant": "Plant",
-"ME5E.CreaturePlantPl": "Plants",
+"ME5E.CreatureOrganic": "Organic",
+"ME5E.CreatureOrganicPl": "Organics",
 "ME5E.CreatureType": "Creature Type",
 "ME5E.CreatureTypeTitle": "Configure Creature Type",
 "ME5E.CreatureSwarm": "Swarm",
 "ME5E.CreatureSwarmSize": "Swarm Size",
 "ME5E.CreatureSwarmPhrase": "Swarm of {size} {type}",
+"ME5E.CreatureSynthetic": "Synthetic",
+"ME5E.CreatureSyntheticPl": "Synthetics",
+"ME5E.CreatureSynthOrganic": "Synth-Organic",
+"ME5E.CreatureSynthOrganicPl": "Synth-Organics",
 "ME5E.CreatureTypeConfig": "Configure Creature Type",
 "ME5E.CreatureTypeSelectorCustom": "Custom Type",
 "ME5E.CreatureTypeSelectorSubtype": "Subtype",
-"ME5E.CreatureUndead": "Undead",
-"ME5E.CreatureUndeadPl": "Undead",
 "ME5E.Crewed": "Crewed",
 "ME5E.Critical": "Critical",
 "ME5E.CriticalHit": "Critical Hit",
 "ME5E.PowerfulCritical": "Powerful Critical",
 "ME5E.Currency": "Currency",
-"ME5E.CurrencyAbbrCP": "cp",
-"ME5E.CurrencyAbbrEP": "ep",
-"ME5E.CurrencyAbbrGP": "gp",
-"ME5E.CurrencyAbbrPP": "pp",
-"ME5E.CurrencyAbbrSP": "sp",
-"ME5E.CurrencyCP": "Copper",
+"ME5E.CurrencyAbbrCR": "cr",
+"ME5E.CurrencyCR": "Credits",
 "ME5E.CurrencyConvert": "Convert All Currency",
 "ME5E.CurrencyConvertHint": "Convert all carried currency to the highest possible denomination to reduce the amount of coinage carried by the character. Be wary, this action cannot be undone.",
-"ME5E.CurrencyEP": "Electrum",
-"ME5E.CurrencyGP": "Gold",
-"ME5E.CurrencyPP": "Platinum",
-"ME5E.CurrencySP": "Silver",
 "ME5E.DamImm": "Damage Immunities",
 "ME5E.DamRes": "Damage Resistances",
 "ME5E.DamVuln": "Damage Vulnerabilities",
@@ -305,6 +284,11 @@
 "ME5E.EquipmentMedium": "Medium Armor",
 "ME5E.EquipmentNatural": "Natural Armor",
 "ME5E.EquipmentShield": "Shield",
+"ME5E.EquipmentArmourChest": "Chestplate",
+"ME5E.EquipmentArmourArms": "Gaunlets",
+"ME5E.EquipmentArmourLegs": "Greaves",
+"ME5E.EquipmentArmourHead": "Helmet",
+"ME5E.EquipmentArmourBody": "Body Armor",
 "ME5E.EquipmentShieldProficiency": "Shields",
 "ME5E.EquipmentTrinket": "Trinket",
 "ME5E.EquipmentVehicle": "Vehicle Equipment",
@@ -312,6 +296,11 @@
 "ME5E.Exhaustion": "Exhaustion",
 "ME5E.Expertise": "Expertise",
 "ME5E.FeatureActionRecharge": "Action Recharge",
+"ME5E.FeatTypeFeat": "Feat",
+"ME5E.FeatTypeClass": "Class Feat",
+"ME5E.FeatTypeBackground": "Background Feat",
+"ME5E.FeatTypeFightingStyle": "Background Feat",
+"ME5E.FeatTypeSpecies": "Species Feat",
 "ME5E.Flaws": "Flaws",
 "ME5E.FormulaCannotContainDiceWarn": "{name} formula cannot contain dice expressions.",
 "ME5E.EffectCreate": "Create Effect",
@@ -327,9 +316,7 @@
 "ME5E.ItemRarityCommon": "common",
 "ME5E.ItemRarityUncommon": "uncommon",
 "ME5E.ItemRarityRare": "rare",
-"ME5E.ItemRarityVeryRare": "very rare",
-"ME5E.ItemRarityLegendary": "legendary",
-"ME5E.ItemRarityArtifact": "artifact",
+"ME5E.ItemRaritySpectre": "spectre",
 "ME5E.ItemTypeClass": "Class",
 "ME5E.ItemTypeClassPl": "Class Levels",
 "ME5E.ItemTypeConsumable": "Consumable",
@@ -340,12 +327,16 @@
 "ME5E.ItemTypeEquipment": "Equipment",
 "ME5E.ItemTypeEquipmentPl": "Equipment",
 "ME5E.ItemTypeFeat": "Feature",
+"ME5E.ItemTypeArchetype": "Archetype",
+"ME5E.ItemTypeSpecies": "Species",
+"ME5E.ItemTypeFightingStyle": "Fighting Style",
+"ME5E.ItemTypeFightingStylePl": "Fighting Styles",
 "ME5E.ItemTypeLoot": "Loot",
 "ME5E.ItemTypeLootPl": "Loot",
 "ME5E.ItemTypeTool": "Tool",
 "ME5E.ItemTypeToolPl": "Tools",
-"ME5E.ItemTypeSpell": "Spell",
-"ME5E.ItemTypeSpellPl": "Spells",
+"ME5E.ItemTypeSpell": "Power",
+"ME5E.ItemTypeSpellPl": "Powers",
 "ME5E.ItemTypeWeapon": "Weapon",
 "ME5E.ItemTypeWeaponPl": "Weapons",
 "ME5E.ItemNoUses": "{name} has no available uses remaining.",
@@ -571,6 +562,9 @@
 "ME5E.MovementConfig": "Configure Movement Speed",
 "ME5E.MovementConfigHint": "Configure the movement speed and special movement attributes of this creature.",
 "ME5E.MovementWalk": "Walk",
+"ME5E.MovementZeroG": "Zero-G",
+"ME5E.MovementLowG": "Low-G",
+"ME5E.MovementHighG": "High-G",
 "ME5E.MovementBurrow": "Burrow",
 "ME5E.MovementClimb": "Climb",
 "ME5E.MovementHover": "Hover",
@@ -586,8 +580,8 @@
 "ME5E.SensesConfigHint": "Configure any special sensory perception abilities that this actor possesses.",
 "ME5E.SenseDarkvision": "Darkvision",
 "ME5E.SenseBlindsight": "Blindsight",
-"ME5E.SenseTremorsense": "Tremorsense",
 "ME5E.SenseTruesight": "Truesight",
+"ME5E.SenseInfrared": "Infrared",
 "ME5E.SenseSpecial": "Special Senses",
 "ME5E.SheetClassCharacter": "Default 5e Character Sheet",
 "ME5E.SheetClassNPC": "Default 5e NPC Sheet",
@@ -597,14 +591,9 @@
 "ME5E.SaveDC": "DC {dc} {ability}",
 "ME5E.SavePromptTitle": "{ability} Saving Throw",
 "ME5E.ScalingFormula": "Scaling Formula",
-"ME5E.SchoolAbj": "Abjuration",
-"ME5E.SchoolCon": "Conjuration",
-"ME5E.SchoolDiv": "Divination",
-"ME5E.SchoolEnc": "Enchantment",
-"ME5E.SchoolEvo": "Evocation",
-"ME5E.SchoolIll": "Illusion",
-"ME5E.SchoolNec": "Necromancy",
-"ME5E.SchoolTrs": "Transmutation",
+"ME5E.SchoolBio": "Biotics",
+"ME5E.SchoolTec": "Tech",
+"ME5E.SchoolCom": "Combat",
 "ME5E.ShortRest": "Short Rest",
 "ME5E.ShortRestNormal": "Short Rest (1 hour)",
 "ME5E.ShortRestGritty": "Short Rest (8 hours)",
@@ -623,23 +612,23 @@
 "ME5E.SizeSmall": "Small",
 "ME5E.SizeTiny": "Tiny",
 "ME5E.SkillAcr": "Acrobatics",
-"ME5E.SkillAni": "Animal Handling",
-"ME5E.SkillArc": "Arcana",
 "ME5E.SkillAth": "Athletics",
 "ME5E.SkillDec": "Deception",
+"ME5E.SkillElc": "Electronics",
+"ME5E.SkillEng": "Engineering",
 "ME5E.SkillHis": "History",
 "ME5E.SkillIns": "Insight",
 "ME5E.SkillInv": "Investigation",
 "ME5E.SkillItm": "Intimidation",
 "ME5E.SkillMed": "Medicine",
-"ME5E.SkillNat": "Nature",
 "ME5E.SkillPer": "Persuasion",
 "ME5E.SkillPrc": "Perception",
 "ME5E.SkillPrf": "Performance",
-"ME5E.SkillRel": "Religion",
+"ME5E.SkillSci": "Science",
 "ME5E.SkillSlt": "Sleight of Hand",
 "ME5E.SkillSte": "Stealth",
 "ME5E.SkillSur": "Survival",
+"ME5E.SkillVeh": "Vehicle Handling",
 "ME5E.SkillPromptTitle": "{skill} Skill Check",
 "ME5E.SkillConfigureTitle": "Configure {skill}",
 "ME5E.SkillConfigure": "Configure Skill",
@@ -673,11 +662,6 @@
 "ME5E.SpellLevel2": "2nd Level",
 "ME5E.SpellLevel3": "3rd Level",
 "ME5E.SpellLevel4": "4th Level",
-"ME5E.SpellLevel5": "5th Level",
-"ME5E.SpellLevel6": "6th Level",
-"ME5E.SpellLevel7": "7th Level",
-"ME5E.SpellLevel8": "8th Level",
-"ME5E.SpellLevel9": "9th Level",
 "ME5E.SpellLevelSlot": "{level} ({n} Slots)",
 "ME5E.SpellLevelPact": "Pact Slot [Level {level}] ({n} Slots)",
 "ME5E.SpellMaterials": "Spellcasting Materials",
@@ -771,6 +755,7 @@
 "ME5E.VehicleTypeAir": "Air Vehicle",
 "ME5E.VehicleTypeLand": "Land Vehicle",
 "ME5E.VehicleTypeWater": "Water Vehicle",
+"ME5E.VehicleTypeSpace": "Space Vehicle",
 "ME5E.VehicleUncrewed": "Uncrewed",
 "ME5E.Versatile": "Versatile",
 "ME5E.VersatileDamage": "Versatile Damage",
@@ -780,29 +765,34 @@
 "ME5E.WarnMultipleShields": "More than one shield equipped, AC calculation may be incorrect.",
 "ME5E.WeaponImprov": "Improvised",
 "ME5E.WeaponMartialM": "Martial Melee",
-"ME5E.WeaponMartialProficiency": "Martial Weapons",
 "ME5E.WeaponMartialR": "Martial Ranged",
 "ME5E.WeaponNatural": "Natural",
-"ME5E.WeaponPropertiesAda": "Adamantine",
-"ME5E.WeaponPropertiesAmm": "Ammunition",
+"ME5E.WeaponPropertiesArc": "Arc",
+"ME5E.WeaponPropertiesBur": "Burst Fire",
+"ME5E.WeaponPropertiesDbt": "Double Tap",
 "ME5E.WeaponPropertiesFin": "Finesse",
-"ME5E.WeaponPropertiesFir": "Firearm",
-"ME5E.WeaponPropertiesFoc": "Focus",
+"ME5E.WeaponPropertiesHet": "Heat",
 "ME5E.WeaponPropertiesHvy": "Heavy",
+"ME5E.WeaponPropertiesHip": "Hip Fire",
 "ME5E.WeaponPropertiesLgt": "Light",
-"ME5E.WeaponPropertiesLod": "Loading",
-"ME5E.WeaponPropertiesMgc": "Magical",
+"ME5E.WeaponPropertiesMel": "Melee",
+"ME5E.WeaponPropertiesRng": "Range",
 "ME5E.WeaponPropertiesRch": "Reach",
-"ME5E.WeaponPropertiesRel": "Reload",
-"ME5E.WeaponPropertiesRet": "Returning",
-"ME5E.WeaponPropertiesSil": "Silvered",
+"ME5E.WeaponPropertiesRec": "Recoil",
+"ME5E.WeaponPropertiesSil": "Silent",
 "ME5E.WeaponPropertiesSpc": "Special",
 "ME5E.WeaponPropertiesThr": "Thrown",
 "ME5E.WeaponPropertiesTwo": "Two-Handed",
 "ME5E.WeaponPropertiesVer": "Versatile",
+"ME5E.WeaponPropertiesWgt": "Weight",
 "ME5E.WeaponSiege": "Siege Weapon",
 "ME5E.WeaponSimpleM": "Simple Melee",
-"ME5E.WeaponSimpleProficiency": "Simple Weapons",
+"ME5E.WeaponARProficiency": "Assault Rifles",
+"ME5E.WeaponHPProficiency": "Heavy Pistols",
+"ME5E.WeaponSMGProficiency": "Sub-Machine guns",
+"ME5E.WeaponSGProficiency": "Shotguns",
+"ME5E.WeaponSRProficiency": "Sniper Rifles",
+"ME5E.WeaponMeleeProficiency": "Melee",
 "ME5E.WeaponSimpleR": "Simple Ranged",
 "ME5E.Weight": "Weight",
 "ME5E.available": "available",
