Started restructuring Class item menu

--- a/lang/en.json
+++ b/lang/en.json
@@ -116,6 +116,7 @@
 "ME5E.AttackPl": "Attacks",
 "ME5E.AttackRoll": "Attack Roll",
 "ME5E.Attributes": "Attributes",
+"ME5E.Armour": "Armour",
 "ME5E.Background": "Background",
 "ME5E.Biography": "Biography",
 "ME5E.Bonds": "Bonds",
@@ -152,9 +153,18 @@
 "ME5E.ClassName": "Class Name",
 "ME5E.ClassOriginal": "Original Class",
 "ME5E.ClassSaves": "Saving Throws",
-"ME5E.ClassSkillsNumber": "Number of Starting Skills",
-"ME5E.ClassSkillsEligible": "Eligible Class Skills",
-"ME5E.ClassSkillsChosen": "Chosen Class Skills",
+"ME5E.ClassSkillsNumber": "Number of Skill Proficiencies",
+"ME5E.ClassSkills": "Skill Proficiencies",
+"ME5E.ClassSkillsOptions": "Skill Proficiency Options",
+"ME5E.ClassWeapons": "Weapon Proficiencies",
+"ME5E.ClassWeaponsOptions": "Weapon Proficiency Options",
+"ME5E.ClassWeaponsOptionalNumber": "Number of Weapon Proficiency Options",
+"ME5E.ClassArmour": "Armour Proficiencies",
+"ME5E.ClassConfig": "Class Config",
+"ME5E.ClassCharConfig": "Character Config",
+"ME5E.ClassTools": "Tool Proficiencies",
+"ME5E.ClassToolsOptions": "Tool Proficiency Options",
+"ME5E.ClassToolsNumber": "Number of Tool Proficiencies",
 "ME5E.ComponentSomatic": "Somatic",
 "ME5E.ConBlinded": "Blinded",
 "ME5E.ConCharmed": "Charmed",
@@ -266,6 +276,10 @@
 "ME5E.DefaultAbilityCheck": "Default Ability Check",
 "ME5E.Description": "Description",
 "ME5E.Details": "Details",
+"ME5E.Config": "Config",
+"ME5E.General": "General",
+"ME5E.Skills": "Skills",
+"ME5E.Proficiencies": "Proficiencies",
 "ME5E.Dimensions": "Dimensions",
 "ME5E.Disadvantage": "Disadvantage",
 "ME5E.DistAny": "Any",
@@ -651,7 +665,7 @@
 "ME5E.SpellCastUpcast": "Cast at Level",
 "ME5E.SpellcasterLevel": "Spellcaster Level",
 "ME5E.SpellCastingHeader": "Spell Casting",
-"ME5E.Spellcasting": "Spellcasting",
+"ME5E.Casting": "Casting",
 "ME5E.SpellComponents": "Spell Components",
 "ME5E.SpellCreate": "Create Spell",
 "ME5E.SpellDC": "Spell DC",
