Created dialog for selecting modifiers, framework for modifiers, and setup max hp for it

--- a/lang/en.json
+++ b/lang/en.json
@@ -4,6 +4,7 @@
 "ACTOR.TypeVehicle": "Vehicle",
 "ITEM.TypeArchetype": "Archetype",
 "ITEM.TypeBackpack": "Backpack",
+"ITEM.TypeBackground": "Background",
 "ITEM.TypeClass": "Class",
 "ITEM.TypeConsumable": "Consumable",
 "ITEM.TypeEquipment": "Equipment",
@@ -168,6 +169,7 @@
 "ME5E.ClassToolsOptions": "Tool Proficiency Options",
 "ME5E.ClassToolsNumber": "Number of Tool Proficiencies",
 "ME5E.ComponentSomatic": "Somatic",
+"ME5E.Condition": "Condition",
 "ME5E.ConBlinded": "Blinded",
 "ME5E.ConCharmed": "Charmed",
 "ME5E.ConDeafened": "Deafened",
@@ -242,6 +244,7 @@
 "ME5E.Crewed": "Crewed",
 "ME5E.Critical": "Critical",
 "ME5E.CriticalHit": "Critical Hit",
+"ME5E.Custom": "Custom",
 "ME5E.PowerfulCritical": "Powerful Critical",
 "ME5E.Currency": "Currency",
 "ME5E.CurrencyAbbrCR": "cr",
@@ -516,6 +519,13 @@
 "ME5E.LongRestResultShort": "{name} takes a long rest.",
 "ME5E.Max": "Max",
 "ME5E.Modifier": "Modifier",
+"ME5E.ModifierAdd": "Add Modifier",
+"ME5E.ModifierName": "Name",
+"ME5E.ModifierType": "Modifier Type",
+"ME5E.ModifierStat": "Stat",
+"ME5E.ModifierNoNameWarn": "You cannot add a modifier without a name",
+"ME5E.ModifierDuplicateNameWarn": "There's already a modifier with that name",
+"ME5E.ModifierNoFormulaWarn": "You cannot add a modifier without a formula",
 "ME5E.Name": "Character Name",
 "ME5E.NoCharges": "No Charges",
 "ME5E.None": "None",
