Started implementing Init modifiers

--- a/lang/en.json
+++ b/lang/en.json
@@ -419,7 +419,6 @@
 "ME5E.HitDiceRoll": "Roll Hit Dice",
 "ME5E.HitDiceUsed": "Hit Dice Used",
 "ME5E.HitDiceWarn": "{name} has no available {formula} Hit Dice remaining!",
-"ME5E.HitPointsConfig": "Configure HP",
 "ME5E.Ideals": "Ideals",
 "ME5E.Identified": "Identified",
 "ME5E.Initiative": "Initiative",
@@ -519,7 +518,10 @@
 "ME5E.LongRestResultShort": "{name} takes a long rest.",
 "ME5E.Max": "Max",
 "ME5E.Modifier": "Modifier",
+"ME5E.ModifierConfigure": "Configure {mod}",
+"ME5E.ModifierConfigHint": "Add or remove modifiers to {mod}",
 "ME5E.ModifierAdd": "Add Modifier",
+"ME5E.ModifierChar": "Character",
 "ME5E.ModifierName": "Name",
 "ME5E.ModifierType": "Modifier Type",
 "ME5E.ModifierStat": "Stat",
