Add max level to config and improve checks that ensure level cap isn't exceeded
Source: https://gitlab.com/foundrynet/dnd5e/-/commit/5272f0086618586bcf48dddb5cc66486da560f24

--- a/lang/en.json
+++ b/lang/en.json
@@ -517,6 +517,8 @@
 "ME5E.LongRestResultHitPoints": "{name} takes a long rest and recovers {health} Hit Points.",
 "ME5E.LongRestResultShort": "{name} takes a long rest.",
 "ME5E.Max": "Max",
+"ME5E.MaxCharacterLevelExceededWarn": "Character cannot be advanced past level {max}.",
+"ME5E.MaxClassLevelExceededWarn": "Class cannot be advanced past level {max}.",
 "ME5E.Modifier": "Modifier",
 "ME5E.ModifierConfigure": "Configure {mod}",
 "ME5E.ModifierConfigHint": "Add or remove modifiers to {mod}",
