Hit Dice as resource for item consumption
Source: https://gitlab.com/foundrynet/dnd5e/-/commit/4f3eb2a451eab4e611dbdeb75317ccfa85634cf4

--- a/lang/en.json
+++ b/lang/en.json
@@ -198,6 +198,9 @@
 "ME5E.ConsumeTitle": "Resource Consumption",
 "ME5E.ConsumeAmmunition": "Ammunition",
 "ME5E.ConsumeAttribute": "Attribute",
+"ME5E.ConsumeHitDice": "Hit Dice",
+"ME5E.ConsumeHitDiceLargest": "Largest Available",
+"ME5E.ConsumeHitDiceSmallest": "Smallest Available",
 "ME5E.ConsumeMaterial": "Material",
 "ME5E.ConsumeCharges": "Item Uses",
 "ME5E.ConsumeWarningNoResource": "{name} is designated to consume {type} but no resource is specified!",
