[#530] Add class identifier to be used in roll formulas
Source: https://gitlab.com/foundrynet/dnd5e/-/commit/55f2b60e2631868e21e4d4c3c8cf4028fe3644b4

--- a/lang/en.json
+++ b/lang/en.json
@@ -148,6 +148,9 @@
 "ME5E.ChatContextDoubleDamage": "Apply Double Damage",
 "ME5E.ChatContextHalfDamage": "Apply Half Damage",
 "ME5E.ChatFlavor": "Chat Message Flavor",
+"ME5E.ClassIdentifier": "Identifier",
+"ME5E.ClassIdentifierHint": "This class's data will be accessible using <strong>@classes.{identifier}</strong> in roll formulas.",
+"ME5E.ClassIdentifierError": "Class identifier can only contain letters (a-z), numbers (0-9), dashes (-), and underscores (_).",
 "ME5E.ClassLevels": "Class Levels",
 "ME5E.ClassMakeOriginal": "Original Class",
 "ME5E.ClassMakeOriginalHint": "First class taken by character used to determine certain class traits when multiclassing.",
@@ -324,7 +327,7 @@
 "ME5E.FeatTypeFightingStyle": "Background Feat",
 "ME5E.FeatTypeSpecies": "Species Feat",
 "ME5E.Flaws": "Flaws",
-"ME5E.FormulaCannotContainDiceWarn": "{name} formula cannot contain dice expressions.",
+"ME5E.FormulaCannotContainDiceError": "{name} formula cannot contain dice expressions.",
 "ME5E.EffectCreate": "Create Effect",
 "ME5E.EffectToggle": "Toggle Effect",
 "ME5E.EffectEdit": "Edit Effect",
