Advancement - Item UI
Source: https://gitlab.com/foundrynet/dnd5e/-/commit/69a9e3970004d34ef32b33a6b004231916d8021d

--- a/lang/en.json
+++ b/lang/en.json
@@ -79,6 +79,9 @@
 "ME5E.Add": "Add",
 "ME5E.AddEmbeddedItemPromptHint": "Do you want to add these items to your character sheet?",
 "ME5E.SelectItemsPromptTitle": "Select Items",
+"ME5E.AdvancementChoices": "choices",
+"ME5E.AdvancementItemGrantTitle": "Item Grant",
+"ME5E.AdvancementTitle": "Advancement",
 "ME5E.Advantage": "Advantage",
 "ME5E.Alignment": "Alignment",
 "ME5E.AlignmentCE": "Chaotic Evil",
