Allow spell components and tags to be configured and localised
Source: https://gitlab.com/foundrynet/dnd5e/-/commit/36098142d3ab2799045d1ba227b0fb14c8fa9b17

--- a/lang/en.json
+++ b/lang/en.json
@@ -175,6 +175,7 @@
 "ME5E.ClassToolsOptions": "Tool Proficiency Options",
 "ME5E.ClassToolsNumber": "Number of Tool Proficiencies",
 "ME5E.ComponentSomatic": "Somatic",
+"ME5E.ComponentSomaticAbbr": "S",
 "ME5E.Condition": "Condition",
 "ME5E.ConBlinded": "Blinded",
 "ME5E.ConCharmed": "Charmed",
@@ -201,6 +202,7 @@
 "ME5E.ConTargeting": "Targeting",
 "ME5E.ConUnconscious": "Unconscious",
 "ME5E.Concentration": "Concentration",
+"ME5E.ConcentrationAbbr": "C",
 "ME5E.ConsumeTitle": "Resource Consumption",
 "ME5E.ConsumeAmmunition": "Ammunition",
 "ME5E.ConsumeAttribute": "Attribute",
@@ -594,6 +596,7 @@
 "ME5E.RestL": "L. Rest",
 "ME5E.RestS": "S. Rest",
 "ME5E.Ritual": "Ritual",
+"ME5E.RitualAbbr": "R",
 "ME5E.Roll": "Roll",
 "ME5E.RollExample": "e.g. 1d4",
 "ME5E.RollMode": "Roll Mode",
