Refactored modifiers, made initiative modifiers work
The refactor moves the modifiers closer to what they're modifying

--- a/lang/en.json
+++ b/lang/en.json
@@ -396,8 +396,7 @@
 "ME5E.FlagsHalflingLuckyHint": "Reroll ones when rolling d20 checks.",
 "ME5E.FlagsInitiativeAdv": "Advantage on Initiative",
 "ME5E.FlagsInitiativeAdvHint": "Provided by feats or magical items.",
-"ME5E.FlagsAlert": "Alert Feat",
-"ME5E.FlagsAlertHint": "Provides +5 to Initiative.",
+"ME5E.FlagsInitiativeDisadv": "Disadvantage on Initiative",
 "ME5E.FlagsJOAT": "Jack of All Trades",
 "ME5E.FlagsJOATHint": "Half-Proficiency to Ability Checks in which you are not already Proficient.",
 "ME5E.FlagsObservant": "Observant Feat",
