Add attack damage info to item sheet
Source https://gitlab.com/foundrynet/dnd5e/-/commit/40d63f44923b584a365d977cfa201deb2e8e9ab0

--- a/lang/en.json
+++ b/lang/en.json
@@ -296,6 +296,7 @@
 "ME5E.General": "General",
 "ME5E.Skills": "Skills",
 "ME5E.Proficiencies": "Proficiencies",
+"ME5E.Properties": "Properties",
 "ME5E.Dimensions": "Dimensions",
 "ME5E.Disadvantage": "Disadvantage",
 "ME5E.DistAny": "Any",
@@ -759,6 +760,7 @@
 "ME5E.TimeRound": "Rounds",
 "ME5E.TimeTurn": "Turns",
 "ME5E.TimeYear": "Years",
+"ME5E.ToHit": "To Hit",
 "ME5E.ToolArtisans": "Artisan's Tools",
 "ME5E.ToolCheck": "Tool Check",
 "ME5E.ToolDisguiseKit": "Disguise Kit",
