Tinkered with items

--- a/lang/en.json
+++ b/lang/en.json
@@ -8,8 +8,10 @@
 "ITEM.TypeConsumable": "Consumable",
 "ITEM.TypeEquipment": "Equipment",
 "ITEM.TypeFeat": "Feature",
+"ITEM.TypeFightingstyle": "Fighting Style",
 "ITEM.TypeLoot": "Loot",
 "ITEM.TypeSpell": "Spell",
+"ITEM.TypeSpecies": "Species",
 "ITEM.TypeSubclass": "Subclass",
 "ITEM.TypeTool": "Tool",
 "ITEM.TypeWeapon": "Weapon",
@@ -81,7 +83,6 @@
 "ME5E.ActorWarningInvalidItem": "{itemType} items cannot be added to a {actorType}.",
 "ME5E.Add": "Add",
 "ME5E.AddEmbeddedItemPromptHint": "Do you want to add these items to your character sheet?",
-"ME5E.SelectItemsPromptTitle": "Select Items",
 "ME5E.AdvancementChoices": "choices",
 "ME5E.AdvancementClassRestriction": "Class Restriction",
 "ME5E.AdvancementClassRestrictionNone": "All Classes",
