Started converting system to ME5e
Setup config
setup template.json
removed temp-max
Cleaned up character sheet

--- a/lang/en.json
+++ b/lang/en.json
@@ -236,28 +236,31 @@
 "ME5E.ClassSkillsNumber": "Number of Starting Skills",
 "ME5E.ClassSkillsEligible": "Eligible Class Skills",
 "ME5E.ClassSkillsChosen": "Chosen Class Skills",
-"ME5E.ComponentMaterial": "Material",
-"ME5E.ComponentMaterialAbbr": "M",
 "ME5E.ComponentSomatic": "Somatic",
 "ME5E.ComponentSomaticAbbr": "S",
-"ME5E.ComponentVerbal": "Verbal",
-"ME5E.ComponentVerbalAbbr": "V",
 "ME5E.ConBlinded": "Blinded",
 "ME5E.ConCharmed": "Charmed",
 "ME5E.ConDeafened": "Deafened",
-"ME5E.ConDiseased": "Diseased",
 "ME5E.ConExhaustion": "Exhaustion",
 "ME5E.ConFrightened": "Frightened",
+"ME5E.ConFrozen": "Frozen",
 "ME5E.ConGrappled": "Grappled",
 "ME5E.ConImm": "Condition Immunities",
 "ME5E.ConIncapacitated": "Incapacitated",
+"ME5E.ConIndoctrinated": "Indoctrinated",
 "ME5E.ConInvisible": "Invisible",
+"ME5E.ConLifted": "Lifted",
 "ME5E.ConParalyzed": "Paralyzed",
-"ME5E.ConPetrified": "Petrified",
 "ME5E.ConPoisoned": "Poisoned",
+"ME5E.ConPrimedForce": "Primed (Force)",
+"ME5E.ConPrimedNecrotic": "Primed (Necrotic)",
+"ME5E.ConPrimedFire": "Primed (Fire)",
+"ME5E.ConPrimedCold": "Primed (Cold)",
+"ME5E.ConPrimedLightning": "Primed (Lightning)",
 "ME5E.ConProne": "Prone",
 "ME5E.ConRestrained": "Restrained",
 "ME5E.ConStunned": "Stunned",
+"ME5E.ConTargeting": "Targeting",
 "ME5E.ConUnconscious": "Unconscious",
 "ME5E.Concentration": "Concentration",
 "ME5E.ConcentrationAbbr": "C",
@@ -294,59 +297,31 @@
 "ME5E.CoverThreeQuarters": "Three Quarters",
 "ME5E.CoverTotal": "Total",
 "ME5E.CostGP": "Cost (GP)",
-"ME5E.CreatureAberration": "Aberration",
-"ME5E.CreatureAberrationPl": "Aberrations",
-"ME5E.CreatureBeast": "Beast",
-"ME5E.CreatureBeastPl": "Beasts",
-"ME5E.CreatureCelestial": "Celestial",
-"ME5E.CreatureCelestialPl": "Celestials",
 "ME5E.CreatureConstruct": "Construct",
 "ME5E.CreatureConstructPl": "Constructs",
-"ME5E.CreatureDragon": "Dragon",
-"ME5E.CreatureDragonPl": "Dragons",
-"ME5E.CreatureElemental": "Elemental",
-"ME5E.CreatureElementalPl": "Elementals",
-"ME5E.CreatureFey": "Fey",
-"ME5E.CreatureFeyPl": "Fey",
-"ME5E.CreatureFiend": "Fiend",
-"ME5E.CreatureFiendPl": "Fiends",
-"ME5E.CreatureGiant": "Giant",
-"ME5E.CreatureGiantPl": "Giants",
-"ME5E.CreatureHumanoid": "Humanoid",
-"ME5E.CreatureHumanoidPl": "Humanoids",
-"ME5E.CreatureMonstrosity": "Monstrosity",
-"ME5E.CreatureMonstrosityPl": "Monstrosities",
-"ME5E.CreatureOoze": "Ooze",
-"ME5E.CreatureOozePl": "Oozes",
-"ME5E.CreaturePlant": "Plant",
-"ME5E.CreaturePlantPl": "Plants",
+"ME5E.CreatureOrganic": "Organic",
+"ME5E.CreatureOrganicPl": "Organics",
 "ME5E.CreatureType": "Creature Type",
 "ME5E.CreatureTypeTitle": "Configure Creature Type",
 "ME5E.CreatureSwarm": "Swarm",
 "ME5E.CreatureSwarmSize": "Swarm Size",
 "ME5E.CreatureSwarmPhrase": "Swarm of {size} {type}",
+"ME5E.CreatureSynthetic": "Synthetic",
+"ME5E.CreatureSyntheticPl": "Synthetics",
+"ME5E.CreatureSynthOrganic": "Synth-Organic",
+"ME5E.CreatureSynthOrganicPl": "Synth-Organics",
 "ME5E.CreatureTypeConfig": "Configure Creature Type",
 "ME5E.CreatureTypeSelectorCustom": "Custom Type",
 "ME5E.CreatureTypeSelectorSubtype": "Subtype",
-"ME5E.CreatureUndead": "Undead",
-"ME5E.CreatureUndeadPl": "Undead",
 "ME5E.Crewed": "Crewed",
 "ME5E.Critical": "Critical",
 "ME5E.CriticalHit": "Critical Hit",
 "ME5E.PowerfulCritical": "Powerful Critical",
 "ME5E.Currency": "Currency",
-"ME5E.CurrencyAbbrCP": "cp",
-"ME5E.CurrencyAbbrEP": "ep",
-"ME5E.CurrencyAbbrGP": "gp",
-"ME5E.CurrencyAbbrPP": "pp",
-"ME5E.CurrencyAbbrSP": "sp",
-"ME5E.CurrencyCP": "Copper",
+"ME5E.CurrencyAbbr": "cr",
 "ME5E.CurrencyConvert": "Convert All Currency",
 "ME5E.CurrencyConvertHint": "Convert all carried currency to the highest possible denomination to reduce the amount of coinage carried by the character. Be wary, this action cannot be undone.",
-"ME5E.CurrencyEP": "Electrum",
-"ME5E.CurrencyGP": "Gold",
-"ME5E.CurrencyPP": "Platinum",
-"ME5E.CurrencySP": "Silver",
+"ME5E.CurrencyCR": "Credits",
 "ME5E.DamImm": "Damage Immunities",
 "ME5E.DamRes": "Damage Resistances",
 "ME5E.DamVuln": "Damage Vulnerabilities",
@@ -397,6 +372,11 @@
 "ME5E.EquipmentNatural": "Natural Armor",
 "ME5E.EquipmentShield": "Shield",
 "ME5E.EquipmentShieldProficiency": "Shields",
+"ME5E.EquipmentArmourChest": "Chestplate",
+"ME5E.EquipmentArmourArms": "Gauntlets",
+"ME5E.EquipmentArmourLegs": "Greaves",
+"ME5E.EquipmentArmourHead": "Helmet",
+"ME5E.EquipmentArmourBody": "Body Armor",
 "ME5E.EquipmentTrinket": "Trinket",
 "ME5E.EquipmentVehicle": "Vehicle Equipment",
 "ME5E.Equipped": "Equipped",
@@ -420,9 +400,7 @@
 "ME5E.ItemRarityCommon": "common",
 "ME5E.ItemRarityUncommon": "uncommon",
 "ME5E.ItemRarityRare": "rare",
-"ME5E.ItemRarityVeryRare": "very rare",
-"ME5E.ItemRarityLegendary": "legendary",
-"ME5E.ItemRarityArtifact": "artifact",
+"ME5E.ItemRaritySpectre": "spectre",
 "ME5E.ItemTypeClass": "Class",
 "ME5E.ItemTypeClassPl": "Class Levels",
 "ME5E.ItemTypeConsumable": "Consumable",
@@ -498,7 +476,6 @@
 "ME5E.HitPointsCurrent": "Current Hit Points",
 "ME5E.HitPointsMax": "Maximum Hit Points",
 "ME5E.HitPointsTemp": "Temporary Hit Points",
-"ME5E.HitPointsTempMax": "Temporary Maximum Hit Points",
 "ME5E.HP": "HP",
 "ME5E.HealthConditions": "Health Conditions",
 "ME5E.HPFormula": "Health Formula",
@@ -569,32 +546,6 @@
 "ME5E.LairAct": "Uses Lair Action",
 "ME5E.LairActionLabel": "Lair Action",
 "ME5E.LairActionInitiative": "Lair Action Initiative Count",
-"ME5E.Languages": "Languages",
-"ME5E.LanguagesAarakocra": "Aarakocra",
-"ME5E.LanguagesAbyssal": "Abyssal",
-"ME5E.LanguagesAquan": "Aquan",
-"ME5E.LanguagesAuran": "Auran",
-"ME5E.LanguagesCelestial": "Celestial",
-"ME5E.LanguagesCommon": "Common",
-"ME5E.LanguagesDeepSpeech": "Deep Speech",
-"ME5E.LanguagesDraconic": "Draconic",
-"ME5E.LanguagesDruidic": "Druidic",
-"ME5E.LanguagesDwarvish": "Dwarvish",
-"ME5E.LanguagesElvish": "Elvish",
-"ME5E.LanguagesGiant": "Giant",
-"ME5E.LanguagesGith": "Gith",
-"ME5E.LanguagesGnoll": "Gnoll",
-"ME5E.LanguagesGnomish": "Gnomish",
-"ME5E.LanguagesGoblin": "Goblin",
-"ME5E.LanguagesHalfling": "Halfling",
-"ME5E.LanguagesIgnan": "Ignan",
-"ME5E.LanguagesInfernal": "Infernal",
-"ME5E.LanguagesOrc": "Orc",
-"ME5E.LanguagesPrimordial": "Primordial",
-"ME5E.LanguagesSylvan": "Sylvan",
-"ME5E.LanguagesTerran": "Terran",
-"ME5E.LanguagesThievesCant": "Thieves' Cant",
-"ME5E.LanguagesUndercommon": "Undercommon",
 "ME5E.LegAct": "Legendary Actions",
 "ME5E.LegActMax": "Maximum Legendary Actions",
 "ME5E.LegActRemaining": "Remaining Legendary Actions",
@@ -665,7 +616,7 @@
 "ME5E.PropertyBase": "Base",
 "ME5E.PropertyTotal": "Total",
 "ME5E.Quantity": "Quantity",
-"ME5E.Race": "Race",
+"ME5E.Species": "Species",
 "ME5E.RacialTraits": "Racial Traits",
 "ME5E.Range": "Range",
 "ME5E.Rarity": "Rarity",
@@ -705,8 +656,8 @@
 "ME5E.SensesConfigHint": "Configure any special sensory perception abilities that this actor possesses.",
 "ME5E.SenseDarkvision": "Darkvision",
 "ME5E.SenseBlindsight": "Blindsight",
-"ME5E.SenseTremorsense": "Tremorsense",
 "ME5E.SenseTruesight": "Truesight",
+"ME5E.SenseInfrared": "Infrared",
 "ME5E.SenseSpecial": "Special Senses",
 "ME5E.SheetClassCharacter": "Default 5e Character Sheet",
 "ME5E.SheetClassNPC": "Default 5e NPC Sheet",
@@ -716,14 +667,9 @@
 "ME5E.SaveDC": "DC {dc} {ability}",
 "ME5E.SavePromptTitle": "{ability} Saving Throw",
 "ME5E.ScalingFormula": "Scaling Formula",
-"ME5E.SchoolAbj": "Abjuration",
-"ME5E.SchoolCon": "Conjuration",
-"ME5E.SchoolDiv": "Divination",
-"ME5E.SchoolEnc": "Enchantment",
-"ME5E.SchoolEvo": "Evocation",
-"ME5E.SchoolIll": "Illusion",
-"ME5E.SchoolNec": "Necromancy",
-"ME5E.SchoolTrs": "Transmutation",
+"ME5E.SchoolBio": "Biotics",
+"ME5E.SchoolTec": "Tech",
+"ME5E.SchoolCom": "Combat",
 "ME5E.ShortRest": "Short Rest",
 "ME5E.ShortRestNormal": "Short Rest (1 hour)",
 "ME5E.ShortRestGritty": "Short Rest (8 hours)",
@@ -742,23 +688,23 @@
 "ME5E.SizeSmall": "Small",
 "ME5E.SizeTiny": "Tiny",
 "ME5E.SkillAcr": "Acrobatics",
-"ME5E.SkillAni": "Animal Handling",
-"ME5E.SkillArc": "Arcana",
 "ME5E.SkillAth": "Athletics",
 "ME5E.SkillDec": "Deception",
+"ME5E.SkillElc": "Electronics",
+"ME5E.SkillEng": "Engineering",
 "ME5E.SkillHis": "History",
 "ME5E.SkillIns": "Insight",
 "ME5E.SkillInv": "Investigation",
 "ME5E.SkillItm": "Intimidation",
 "ME5E.SkillMed": "Medicine",
-"ME5E.SkillNat": "Nature",
 "ME5E.SkillPer": "Persuasion",
 "ME5E.SkillPrc": "Perception",
 "ME5E.SkillPrf": "Performance",
-"ME5E.SkillRel": "Religion",
+"ME5E.SkillSci": "Science",
 "ME5E.SkillSlt": "Sleight of Hand",
 "ME5E.SkillSte": "Stealth",
 "ME5E.SkillSur": "Survival",
+"ME5E.SkillVeh": "Vehicle Handling",
 "ME5E.SkillPromptTitle": "{skill} Skill Check",
 "ME5E.SkillConfigureTitle": "Configure {skill}",
 "ME5E.SkillConfigure": "Configure Skill",
@@ -904,6 +850,7 @@
 "ME5E.VehicleTypeAir": "Air Vehicle",
 "ME5E.VehicleTypeLand": "Land Vehicle",
 "ME5E.VehicleTypeWater": "Water Vehicle",
+"ME5E.VehicleTypeSpace": "Space Vehicle",
 "ME5E.VehicleUncrewed": "Uncrewed",
 "ME5E.Versatile": "Versatile",
 "ME5E.VersatileDamage": "Versatile Damage",
@@ -917,27 +864,32 @@
 "ME5E.WeaponMartialProficiency": "Martial Weapons",
 "ME5E.WeaponMartialR": "Martial Ranged",
 "ME5E.WeaponNatural": "Natural",
-"ME5E.WeaponPropertiesAda": "Adamantine",
-"ME5E.WeaponPropertiesAmm": "Ammunition",
+"ME5E.WeaponPropertiesArc": "Arc",
+"ME5E.WeaponPropertiesBur": "Burst Fire",
+"ME5E.WeaponPropertiesDbt": "Double Tap",
 "ME5E.WeaponPropertiesFin": "Finesse",
-"ME5E.WeaponPropertiesFir": "Firearm",
-"ME5E.WeaponPropertiesFoc": "Focus",
+"ME5E.WeaponPropertiesHet": "Heat",
 "ME5E.WeaponPropertiesHvy": "Heavy",
+"ME5E.WeaponPropertiesHip": "Hip Fire",
 "ME5E.WeaponPropertiesLgt": "Light",
-"ME5E.WeaponPropertiesLod": "Loading",
-"ME5E.WeaponPropertiesMgc": "Magical",
+"ME5E.WeaponPropertiesMel": "Melee",
+"ME5E.WeaponPropertiesRng": "Range",
 "ME5E.WeaponPropertiesRch": "Reach",
-"ME5E.WeaponPropertiesRel": "Reload",
-"ME5E.WeaponPropertiesRet": "Returning",
-"ME5E.WeaponPropertiesSil": "Silvered",
+"ME5E.WeaponPropertiesRec": "Recoil",
+"ME5E.WeaponPropertiesSil": "Silent",
 "ME5E.WeaponPropertiesSpc": "Special",
 "ME5E.WeaponPropertiesThr": "Thrown",
 "ME5E.WeaponPropertiesTwo": "Two-Handed",
 "ME5E.WeaponPropertiesVer": "Versatile",
+"ME5E.WeaponPropertiesWgt": "Weight",
 "ME5E.WeaponSiege": "Siege Weapon",
 "ME5E.WeaponSimpleM": "Simple Melee",
-"ME5E.WeaponSimpleProficiency": "Simple Weapons",
-"ME5E.WeaponSimpleR": "Simple Ranged",
+"ME5E.WeaponARProficiency": "Assault Rifles",
+"ME5E.WeaponHPProficiency": "Heavy Pistols",
+"ME5E.WeaponSMGProficiency": "Sub-Machine guns",
+"ME5E.WeaponSGProficiency": "Shotguns",
+"ME5E.WeaponSRProficiency": "Sniper Rifles",
+"ME5E.WeaponMeleeProficiency": "Melee",
 "ME5E.Weight": "Weight",
 "ME5E.available": "available",
 "ME5E.description": "A system for playing the fifth edition of the worlds most popular roleplaying game in the Foundry Virtual Tabletop environment.",
@@ -950,8 +902,8 @@
 "MACRO.5eNoActorSelected": "No selected or assigned actor could be found to target with macro.",
 "MACRO.5eUnownedWarn": "You can only create macro buttons for owned Items",
 
-"MIGRATION.5eBegin": "Applying ME5E System Migration for version {version}. Please be patient and do not close your game or shut down your server.",
-"MIGRATION.5eComplete": "ME5E System Migration to version {version} completed!",
+"MIGRATION.5eBegin": "Applying ME5e System Migration for version {version}. Please be patient and do not close your game or shut down your server.",
+"MIGRATION.5eComplete": "ME5e System Migration to version {version} completed!",
 "MIGRATION.5eVersionTooOldWarning": "Your ME5e system data is from too old a Foundry version and cannot be reliably migrated to the latest version. The process will be attempted, but errors may occur.",
 
 "SETTINGS.5eAllowPolymorphingL": "Allow players to polymorph their own actors.",
@@ -971,8 +923,6 @@
 "SETTINGS.5eDiagN": "Diagonal Movement Rule",
 "SETTINGS.5eDiagPHB": "PHB: Equidistant (5/5/5)",
 "SETTINGS.5eDiagDMG": "DMG: Alternating (5/10/5)",
-"SETTINGS.5eHonorL": "Enable the use of the optional Honor ability score. Requires the world to be reloaded.",
-"SETTINGS.5eHonorN": "Honor Ability Score",
 "SETTINGS.5eInitTBL": "Append the raw Dexterity ability score to break ties in Initiative.",
 "SETTINGS.5eInitTBN": "Initiative Dexterity Tiebreaker",
 "SETTINGS.5eMetricN": "Use Metric Weight Units",
@@ -991,7 +941,5 @@
 "SETTINGS.5eRestPHB": "Player's Handbook (LR: 8 hours, SR: 1 hour)",
 "SETTINGS.5eRestGritty": "Gritty Realism (LR: 7 days, SR: 8 hours)",
 "SETTINGS.5eRestEpic": "Epic Heroism (LR: 1 hour, SR: 1 min)",
-"SETTINGS.5eSanityL": "Enable the use of the optional Sanity ability score. Requires the world to be reloaded.",
-"SETTINGS.5eSanityN": "Sanity Ability Score",
 "SETTINGS.5eUndoChanges": "Undo Changes"
 }
