Added field for setting ability used by skill checks

--- a/lang/en.json
+++ b/lang/en.json
@@ -492,7 +492,10 @@
 "ME5E.Identified": "Identified",
 "ME5E.Identifier": "Identifier",
 "ME5E.IdentifierError": "Identifier can only contain letters (a-z), numbers (0-9), dashes (-), and underscores (_).",
+"ME5E.InitConfig": "Configure Initiative",
+"ME5E.InitConfigHint": "Adjust initiative skill and bonus",
 "ME5E.Initiative": "Initiative",
+"ME5E.InitiativeBonus": "Initiative Bonus",
 "ME5E.Inspiration": "Inspiration",
 "ME5E.Inventory": "Inventory",
 "ME5E.ItemActionType": "Action Type",
@@ -687,6 +690,7 @@
 "ME5E.SizeMedium": "Medium",
 "ME5E.SizeSmall": "Small",
 "ME5E.SizeTiny": "Tiny",
+"ME5E.SkillAbility": "Skill Ability",
 "ME5E.SkillAcr": "Acrobatics",
 "ME5E.SkillAth": "Athletics",
 "ME5E.SkillDec": "Deception",
