Setup modifiers, moved formula evaluation to utilities, implemented hp modifier

--- a/lang/en.json
+++ b/lang/en.json
@@ -581,6 +581,13 @@
 "ME5E.MaxClassLevelExceededWarn": "Class cannot be advanced past level {max}.",
 "ME5E.MaxClassLevelMinimumWarn": "Class must have at least one level.",
 "ME5E.Modifier": "Modifier",
+"ME5E.ModifierCategoryAttribute": "Attribute",
+"ME5E.ModifierCategoryBase": "Base",
+"ME5E.ModifierCategoryClass": "Class",
+"ME5E.ModifierCategoryCustom": "Custom",
+"ME5E.ModifierCategoryEffect": "Effect",
+"ME5E.ModifierCategoryFeat": "Feat",
+"ME5E.ModifierCategoryItem": "Item",
 "ME5E.Name": "Character Name",
 "ME5E.NoCharges": "No Charges",
 "ME5E.None": "None",
